--- a/src/ElearningBundle/Resources/views/User/show.html.twig
+++ b/src/ElearningBundle/Resources/views/User/show.html.twig
@@ -2,7 +2,19 @@
 
 {% block body %}
     <h1>User Profile</h1>
-
+    {% if (app.user.id != user.id) %}
+        <div id="follow-{{ user.id }}">
+            {% if (follow != NULL) %}
+                <a class="ajax-follow btn btn-info" href="{{ path('unfollow', { 'id': user.id}) }}" id="follow-id-{{ user.id }}" >
+                    Unfollow
+                </a>
+            {% else %}
+                <a class="ajax-follow btn btn-info" href="{{ path('follow', { 'id': user.id}) }}" id="follow-id-{{ user.id }}" >
+                    Follow
+                </a>
+            {% endif %}
+        </div>
+    {% endif %}
     <table class="record_properties table table-responsive">
         <tbody>
         <tr>
@@ -22,4 +34,8 @@
     <a href="{{ path('user_edit') }}" class="btn btn-default">
         Edit profile
     </a>
+
+    {% block javascripts %}
+        <script src="{{ asset('js/follow.js') }}"></script>
+    {% endblock %}
 {% endblock %}
